Changed layout Fixed display

--- a/index.html
+++ b/index.html
@@ -11,24 +11,24 @@
 	<body>
 		<div id="calculator">
 			<div id="res"></div>
-			<div class="number btn" id="7">7</div>
-			<div class="number btn" id="8">8</div>
-			<div class="number btn" id="9">9</div>
-			<div class="btn op" id="sum">+</div>
-			<div class="number btn" id="4">4</div>
-			<div class="number btn" id="5">5</div>
-			<div class="number btn" id="6">6</div>
-			<div class="btn op" id="sub">-</div>
-			<div class="number btn" id="1">1</div>
-			<div class="number btn" id="2">2</div>
-			<div class="number btn" id="3">3</div>
-			<div class="btn op" id="mul">x</div>
-			<div class="btn op" id="dot">.</div>
-			<div class="number btn" id="0">0</div>
-			<div class="btn op" id="del">del</div>
-			<div class="btn op" id="div">/</div>
-			<div class="btn op" id="equ">=</div>    
-			<div class="btn op" id="clr">C</div>
+			<button class="number btn" id="7">7</button>
+			<button class="number btn" id="8">8</button>
+			<button class="number btn" id="9">9</button>
+			<button class="btn op" id="sum">+</button>
+			<button class="number btn" id="4">4</button>
+			<button class="number btn" id="5">5</button>
+			<button class="number btn" id="6">6</button>
+			<button class="btn op" id="sub">-</button>
+			<button class="number btn" id="1">1</button>
+			<button class="number btn" id="2">2</button>
+			<button class="number btn" id="3">3</button>
+			<button class="btn op" id="mul">x</button>
+			<button class="btn op" id="dot">.</button>
+			<button class="number btn" id="0">0</button>
+			<button class="btn op" id="del">del</button>
+			<button class="btn op" id="div">/</button>
+			<button class="btn op" id="equ">=</button>
+			<button class="btn op" id="clr">C</button>
 		</div>
         <script src="js/main.js" type="text/javascript"></script>
 	</body>
